--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,51 +2,49 @@
 <html>
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
     {% include meta.html %}
-
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+    <div class="hydejack-wrapper">
+      
+      <aside class="sidebar">
+        <div class="sidebar-inner">
+          <header class="masthead">
+            <a href="{{ site.baseurl }}/" class="site-avatar">
+              <img src="{{ site.avatar }}" alt="{{ site.name }}" />
+            </a>
 
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
+            <div class="site-info">
+              <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+              <p class="site-description">{{ site.description }}</p>
+            </div>
 
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
-      </div>
-    </div>
+            <nav>
+              <a href="{{ site.baseurl }}/">Blog</a>
+              <a href="{{ site.baseurl }}/about">About</a>
+            </nav>
+          </header>
 
-    <div id="main" role="main" class="container">
-      {{ content }}
-    </div>
+          <footer class="sidebar-footer">
+            {% include svg-icons.html %}
+            <p class="copyright">&copy; {{ site.time | date: '%Y' }}</p>
+          </footer>
+        </div>
+      </aside>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
+      <main id="main" role="main" class="main-content">
+        <div class="content-wrapper">
+          {{ content }}
+        </div>
+      </main>
+
     </div>
 
     {% include analytics.html %}
+    
     <script>
       var refTagger = {
         settings: {
@@ -60,13 +58,8 @@
           socialSharing: ["twitter","facebook","google"],
           tagChapters: true,
           customStyle : {
-            heading: {
-              backgroundColor : "#e6e7f8",
-              color : "#4d22b3"
-            },
-            body   : {
-              color : "#000000"
-            }
+            heading: { backgroundColor : "#e6e7f8", color : "#4d22b3" },
+            body   : { color : "#000000" }
           }
         }
       };
