--- a/style.scss
+++ b/style.scss
@@ -1,289 +1,163 @@
 ---
 ---
 
-//
-// IMPORTS
-//
+// VARIABLES
+$deep-violet:    #1a0033;
+$electric-purp:  #6400c7;
+$soft-violet:    #f4effa;
+$text-dark:      #2d3436;
+$text-muted:     #a0a0c0;
+$white:          #ffffff;
+$helvetica:      "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-@import "reset";
-@import "variables";
-// Syntax highlighting @import is at the bottom of this file
-
-/**************/
-/* BASE RULES */
-/**************/
-
-html {
-  font-size: 100%;
-}
+// BASE RULES
+* { box-sizing: border-box; }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  margin: 0;
+  padding: 0;
+  font: 18px/1.6 $helvetica;
+  color: $text-dark;
+  background: $white;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 740px;
-  padding: 0 10px;
+// HYDEJACK LAYOUT ENGINE
+.hydejack-wrapper {
+  display: flex;
+  min-height: 100vh;
+
+  @media (max-width: 850px) {
+    flex-direction: column;
+  }
+}
+
+// SIDEBAR STYLING
+.sidebar {
+  flex: 0 0 320px;
+  background: $deep-violet;
+  color: $white;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  display: flex;
+  overflow-y: auto;
+
+  @media (max-width: 850px) {
+    flex: 0 0 auto;
+    width: 100%;
+    height: auto;
+    position: relative;
+    padding: 40px 20px;
+  }
+}
+
+.sidebar-inner {
+  padding: 50px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: #6400c7 ;
-  font-weight: bold;
-
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
-
-  @include mobile {
-    line-height: 1.4;
-  }
-}
-
-h1 {
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
-}
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 20px;
-}
-
-h4 {
-  font-size: 18px;
-  color: $gray;
-}
-
-p {
-  margin: 15px 0;
-}
-
-a {
-  color: $blue;
-  text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
-}
-
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
-}
-
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
-
-ul ul, ol ul {
-  list-style-type: circle;
-}
-
-em, i {
-  font-style: italic;
-}
-
-strong, b {
-  font-weight: bold;
-}
-
-img {
-  max-width: 100%;
-}
-
-// Fixes images in popup boxes from Google Translate
-.gmnoprint img {
-  max-width: none;
-}
-
-.date {
-  font-style: italic;
-  color: $gray;
-}
-
-// Specify the color of the selection
-::-moz-selection {
-  color: $black;
-  background: $lightGray;
-}
-::selection {
-  color: $black;
-  background: $lightGray;
-}
-
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*********************/
-/* LAYOUT / SECTIONS */
-/*********************/
-
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+.site-avatar img {
+  width: 80px;
+  height: 80px;
+  border-radius: 12px;
+  border: 2px solid $electric-purp;
+  transition: transform 0.3s ease;
+  &:hover { transform: rotate(5deg) scale(1.05); }
 }
 
 .site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+  margin: 20px 0 5px;
+  font-size: 26px;
+  font-weight: 700;
+  a { color: $white; text-decoration: none; }
 }
 
 .site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
+  font-size: 14px;
+  color: $text-muted;
+  margin-bottom: 30px;
 }
 
 nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid rgba(255,255,255,0.1);
+  padding-top: 20px;
 
   a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
+    color: $white;
+    text-decoration: none;
+    font-size: 18px;
     font-weight: 300;
-    letter-spacing: 1px;
+    padding: 12px 0;
+    transition: all 0.2s ease;
+    border-bottom: 1px solid rgba(255,255,255,0.05);
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
+    &:hover {
+      color: $electric-purp;
+      padding-left: 8px;
     }
   }
 }
 
-//
-// .main
-//
+// MAIN CONTENT AREA
+.main-content {
+  flex: 1;
+  background: $white;
+  padding: 80px 40px;
 
-.posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+  @media (max-width: 850px) {
+    padding: 40px 20px;
+  }
 }
 
-.posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
+.content-wrapper {
+  max-width: 720px;
+  margin: 0 auto;
+}
+
+// TYPOGRAPHY
+h1, h2, h3, h4 {
+  color: $deep-violet;
+  margin-top: 1.5em;
+}
+
+a {
+  color: $electric-purp;
+  text-decoration: none;
 }
 
 .post {
+  padding-bottom: 40px;
+  border-bottom: 1px solid $soft-violet;
+  margin-bottom: 40px;
+
   blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
+    margin: 30px 0;
+    padding: 20px 30px;
+    border-left: 5px solid $electric-purp;
+    background: $soft-violet;
     font-style: italic;
-  }
-
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
+    font-size: 20px;
   }
 }
 
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
+// FOOTER
+.sidebar-footer {
+  margin-top: 40px;
+  
+  .svg-icon {
+    fill: $text-muted;
+    margin-right: 15px;
+    &:hover { fill: $white; }
+  }
 
-footer {
-  padding: 20px 0;
-  text-align: center;
+  .copyright {
+    font-size: 12px;
+    color: rgba(255,255,255,0.3);
+    margin-top: 20px;
+  }
 }
-
-// Settled on moving the import of syntax highlighting to the bottom of the CSS
-// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
-@import "highlights";
-@import "svg-icons";
