change menu toggle button position to bottom right

--- a/style.scss
+++ b/style.scss
@@ -223,7 +223,7 @@ a {
   padding: 10px;
   border-radius: 8px;
   position: fixed;
-  top: 20px;
+  bottom: 20px;
   right: 20px;
   transition: all 0.3s ease;
 
