--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,15 +1,6 @@
 ---
 layout: default
-title: Tags
 ---
-
-<h1>Posts tagged with "{{ page.target_tag }}"</h1>
-
-<ul class="posts">
-  {% for post in site.tags[page.target_tag] %}
-    <li>
-      <span>{{ post.date | date_to_string }}</span> &raquo; 
-      <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+<div class="post">
+  {{ content }}
+</div>
