update nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Posts</a>
               <a href="{{ site.baseurl }}/about">About</a>
-              {% for book in site.data.bible %}
-                <a class="menu-tag" href="{{ site.baseurl }}/tag/{{ book.tag }}/">
-                  {{ book.name }}
-                </a>
-              {% endfor %}
+              <a href="{{ site.baseurl }}/Zechariah">38 Zechariah</a>
             </nav>
             
             <div class="external-links">
