--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Posts</a>
               <a href="{{ site.baseurl }}/about">About</a>
-              <a href="{{ site.baseurl }}/Zechariah">38 Zechariah</a>
+              <a class="menu-tag" href="{{ site.baseurl }}/Zechariah">38 Zechariah</a>
             </nav>
             
             <div class="external-links">
