--- a/_layouts/bible-tag-page.html
+++ b/_layouts/bible-tag-page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="tag-page-container">
   
-  <h1 class="tag-page-title">Posts tagged with "{{ page.tag_name }}"</h1>
+  <h1 class="tag-page-title">Book of {{ page.tag_name }}</h1>
 
   <div class="posts-container">
     {% for post in site.posts %}
