--- a/_layouts/bible-tag-page.html
+++ b/_layouts/bible-tag-page.html
@@ -17,7 +17,7 @@ layout: default
           </time>
           
           <div class="entry">
-            {{ post.content | replace_first: "Devotional Meditation", "" | strip_html | truncatewords:30 }}
+            {{ post.content | replace_first: "Devotional meditation", "" | strip_html | truncatewords:30 }}
           </div>
 
           <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More &rarr;</a>
