update minor texts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
           <footer class="sidebar-footer">
             {% include svg-icons.html %}
-            <p class="copyright">&copy; {{ site.time | date: '%Y' }}</p>
+            <p class="copyright">&copy; {{ site.time | date: '%Y' }} This site was built using <a href="https://pages.github.com/">GitHub Pages</a> & <a href="https://github.com/barryclark/jekyll-now">Jekyll-now</a>Jekyll-now]</p>
           </footer>
         </div>
         <div class="scroll-indicator"></div>
