--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,9 @@
                 <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path></svg>
                 <span>StoatChat Server</span>
               </a>
+              <a href="https://www.paypal.com/paypalme/MichelleYeow">
+                <img src="https://img.shields.io/badge/Buy%20Me%20A%20Coffee-PayPal-orange.svg" alt="Buy Me A Coffee">
+              </a>
             </div>
           </header>
 
