update a href tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path></svg>
                 <span>StoatChat Server</span>
               </a>
-              <a href="https://www.paypal.com/paypalme/MichelleYeow">
+              <a href="https://www.paypal.com/paypalme/MichelleYeow" target="_blank" rel="noopener" class="social-link" title="Buy Me A Coffee">
                 <img src="https://img.shields.io/badge/Buy%20Me%20A%20Coffee-PayPal-orange.svg" alt="Buy Me A Coffee">
               </a>
             </div>
@@ -46,7 +46,7 @@
 
           <footer class="sidebar-footer">
             {% include svg-icons.html %}
-            <p class="copyright">&copy; {{ site.time | date: '%Y' }} This site was built using <a href="https://pages.github.com/">GitHub Pages</a> & <a href="https://github.com/barryclark/jekyll-now">Jekyll-now</a>Jekyll-now]</p>
+            <p class="copyright">&copy; {{ site.time | date: '%Y' }} This site was built using <a href="https://pages.github.com/" target="_blank" rel="noopener" class="social-link" title="Github Pages">GitHub Pages</a> & <a href="https://github.com/barryclark/jekyll-now" target="_blank" rel="noopener" class="social-link" title="Jekyll-Now">Jekyll-now</a></p>
           </footer>
         </div>
         <div class="scroll-indicator"></div>
